--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,13 @@
 [phases.setup]
-nixPkgs = ['php82', 'php82Packages.composer']
+nixPkgs = [
+    'php82',
+    'php82Packages.composer',
+    'php82Extensions.gd',
+    'php82Extensions.zip',
+    'php82Extensions.mbstring',
+    'php82Extensions.xml',
+    'php82Extensions.curl'
+]
 
 [phases.install]
 cmds = ['composer install --no-dev --optimize-autoloader']
