--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "phpoffice/phpspreadsheet": "^5.4",
+        "resend/resend-laravel": "^1.1",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.6",
         "tecnickcom/tcpdf": "^6.10",
